argocd-k8s-resources/monitoring/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana-http-ingress-tailscale
  annotations:
    tailscale.com/funnel: "false"
    argocd.argoproj.io/sync-wave: "10"
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  tls:
  - hosts:
    - monitoring-grafana
